add markers function now deals with duplicates

--- a/README.Rmd
+++ b/README.Rmd
@@ -9,6 +9,10 @@ knitr::opts_chunk$set(echo = TRUE)
 
 For importing and working with fNIRS data from COBI Studio in R. 
 
+## Current status
+
+This package is currently in development and is not yet ready for use. It is not recommended for installation at this time.
+
 ## Installation
 
 You can install the development version of cobifnirs from [GitHub]()
