--- a/README.Rmd
+++ b/README.Rmd
@@ -7,6 +7,9 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+[![DOI](https://zenodo.org/badge/779680219.svg)](https://zenodo.org/doi/10.5281/zenodo.10912115)
+
+
 For importing and working with fNIRS data from COBI Studio in R. 
 
 ## Current status (April 2024)
