--- a/README.Rmd
+++ b/README.Rmd
@@ -9,32 +9,21 @@ knitr::opts_chunk$set(echo = TRUE)
 
 [![DOI](https://zenodo.org/badge/779680219.svg)](https://zenodo.org/doi/10.5281/zenodo.10912115)
 
+For importing and working with fNIRS data from COBI Studio in R.
 
-For importing and working with fNIRS data from COBI Studio in R. 
+## Current Status: Beta (v0.1.0)
+**Date:** February 2026
 
-## Current status (April 2024)
-
-This package is currently in early development. Use with caution.
-
-## Current features
-
-- Importing fNIRS data from COBI Studio (.nir) into a data frame
-- Adding markers to the data frame from the COBI Studio markers file (.mrk)
-- Creating a summary report of signal quality (weak and saturated channels)
-- Removing the ambient light signal from the data file
-- Removing selected channels from the data file (e.g., channels with poor signal quality)
-- Creating delta OD (change in optical density) values from the raw light intensity data
-
-## Planned features (in progress)
-
-- Converting delta OD values to HbO and HbR values (i.e., oxy data) using the modified Beer-Lambert (MBLL) law
-- Adding Brodmann areas to the data frame based on the channel locations
-- Plotting the data (x = time, y = HbO/HbR values) for each channel
-- Plotting the data (showing activation in the brain areas)
-- Filtering the data using a low-pass filter
-- Applying a SMAR (i.e., sliding window motion artifact rejection) filter to the data
-
-
+## Current Features
+* **Import:** Robustly handles COBI `.nir` files (including ambient channel isolation).
+* **Preprocessing:**
+  * **Artifact Correction:** IQR-based sliding window motion artifact rejection (SMAR).
+  * **Filtering:** Zero-phase Butterworth low-pass filter.
+  * **Quality Check:** Signal quality reports (weak/saturated channels).
+* **Concentration:** Modified Beer-Lambert Law (MBLL) conversion to HbO/HbR ($\mu M$).
+* **Analysis:**
+  * **GLM:** General Linear Model with stick functions and canonical HRF.
+  * **Statistics:** Beta extraction and condition comparisons.
 
 ## Installation
 
@@ -44,6 +33,28 @@ You can install the development version of cobifnirs from [GitHub]()
 
 # install.packages("devtools")
 devtools::install_github("christopherjwilson/cobifnirs")
+```
+
+## Quick Start: Analysis Pipeline
+
+```r
+# 1. Import & Preprocess
+data <- import_nirs("test.nir") %>%
+  add_markers() %>%
+  remove_ambient() %>%
+  apply_smar(iqr_multiplier = 1.5) %>%  # Artifact Correction
+  apply_lowpass(cutoff = 0.1) %>%       # Filtering
+  create_delta_od()
+
+# 2. Calculate Concentration (Uses defaults: Gratzer, DPF=6)
+oxy_data <- apply_mbll(data)
+
+# 3. Run GLM Statistics
+# Define which markers represent trial starts
+conditions <- c("Start_Trial", "Condition_A")
+glm_stats <- calculate_glm(oxy_data, conditions = conditions)
+
+print(glm_stats)
 
 ```
 
@@ -85,14 +96,15 @@ names(nirsData) <- c(paste("p",pids, sep = ""))
 
 nirsData <- mapply(`[<-`, nirsData, 'npid', value = pids, SIMPLIFY = FALSE)
 
-
 ```
 
 ## Adding the markers to the data
 
-Important: the markers file must be in the same folder as the .nir file and have the same name.
+Important: the markers file must be in the same folder as the .nir file
+and have the same name.
 
-See the function documentation for more details on how to use this function (re: duplicate markers).
+See the function documentation for more details on how to use this
+function (re: duplicate markers).
 
 ``` r
 
@@ -103,7 +115,6 @@ nirsData <- add_markers(nirsData)
 # add markers to multiple datasets
 
 nirsData <- lapply(nirsData, add_markers)
-
 ```
 
 ## Creating a summary report of signal quality
@@ -125,7 +136,6 @@ write.csv(problem_channels, "problem_channels.csv")
 
 
 
-
 ```
 
 ## Removing problem channels
@@ -139,8 +149,6 @@ nirsData <- remove_channels(nirsData, channels = c(1, 2, 3))
 # remove selected channels from multiple datasets
 
 ## List of problem channels for removal
-## You need to have created a file with channels to remove. This is best done by running the signal_summary function and then visually inspecting the channels to remove. Then export the signal_summary data frame to a csv file and add an extra column to indicate whether the channel should be removed or not.
-## In the current example, this file is called problem_channels.csv and the column is called "remove".
 
 problem_channels_r <- read_csv(paste0(myPath, "/problem_channels.csv"))
 
@@ -150,19 +158,8 @@ problem_channels_r$remove <- as.logical(problem_channels_r$remove)
 
 problem_channels_r <- problem_channels_r %>% filter(problem_channels_r$remove == TRUE) 
 
-## Once the information has been imported and filtered, you can remove the channels from the data using the fuction below. All of the channels in the problem_channels_r data frame will be removed from the nirData list, leaving only the good channels.
+## remove the channels (after visual inspection too!)
 
 nirsData <- lapply(nirsData, removeChannels, problem_channels_r)
 
-
 ```
-
-
-
-
-
-
-
-
-
-
